Projet_GL/src/test/deca/context/valid/unprovided/testObjet/fields/fieldSelection.deca
// Description:
//   Définition d'une classe avec 1 champ initialisés et manipulation dans le main
//
// Resultat:
//    Aucune erreur attendue
//
// Historique:
//    cree le 22/01/2018

class A {

      int x;
}

{
        A a = new A();
	a.x = 1;
}
